--- a/new-try/assets/css/footer.css
+++ b/new-try/assets/css/footer.css
@@ -1,11 +1,16 @@
 footer{
     display: flex;
-    position: absolute;
-    bottom: 0; right: 0; left: 0;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
-footer p{
+.contact{
     font-weight: bold;
     font-size: 1.3rem;
     margin-bottom: 0;
+    cursor: pointer;
+    font-family: "Chakra Petch";
+    background-color: transparent;
+    border: none;
+    z-index: 100;
 }
