--- a/new-try/assets/css/footer.css
+++ b/new-try/assets/css/footer.css
@@ -4,13 +4,74 @@ footer{
     flex-direction: column;
     align-items: center;
 }
-.contact{
+.form-button{
+    text-decoration: underline;
     font-weight: bold;
     font-size: 1.3rem;
     margin-bottom: 0;
-    cursor: pointer;
     font-family: "Chakra Petch";
     background-color: transparent;
     border: none;
+    cursor: pointer;
     z-index: 100;
+    transition: opacity 0.15s;
+}
+.form-button:hover{
+    opacity: 0.5;
+}
+.form-button:active{
+    opacity: 0.3;
+}
+.contact-form{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: rgb(248, 247, 245);
+    border-radius: 10px;
+    padding-right: 0.5rem;
+    padding-top: 0.5rem;
+    height: 30rem;
+    width: 30rem;
+}
+.overlay{
+    position: fixed;
+    left: 0;right: 0;bottom: 0;top: 0;
+    background-color: rgba(0,0,0,0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+}
+.contact-form div{
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+}
+.contact-form div label{
+    font-size: 1.4rem;
+    margin-left: 0.3rem;
+}
+.contact-form div input{
+    width: 60%;
+    border: none;
+    border-radius: 5px;
+    padding-left: 0.5rem;
+}
+.contact-form div input:placeholder{
+    font-family: "Chakra Petch";
+    font-weight: 600;
+    padding-left: 0.5rem;
+}
+.close-form{
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    right: 5px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 15px;
+    cursor: pointer;
+    
 }
