--- a/new-try/assets/css/index.css
+++ b/new-try/assets/css/index.css
@@ -1,8 +1,9 @@
 body{
     position: relative;
+    font-family: "Chakra Petch";
 }
 p{
-    font-family: "Chakra Petch";
+
 }
 a{
     text-decoration: none;
@@ -14,4 +15,12 @@ a:hover{
 a:active{
     opacity: 0.5;
     transition: 0.15s;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type=number]{
+    -moz-appearance: textfield;
 }
