--- a/new-try/assets/css/footer.css
+++ b/new-try/assets/css/footer.css
@@ -27,7 +27,7 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: rgb(248, 247, 245);
+    background-color: rgb(199, 198, 195);
     border-radius: 10px;
     padding-right: 0.5rem;
     padding-top: 0.5rem;
@@ -73,5 +73,17 @@ footer{
     font-weight: 700;
     font-size: 15px;
     cursor: pointer;
-    
+}
+@media only screen and (max-width:600px){
+    .contact-form{
+        width: 15rem;
+        height: 19rem;
+    }
+    .contact-form div{
+        flex-direction: column;
+        align-items: center;
+    }
+    .contact-form div label{
+        font-size: 1rem;
+    }
 }
