--- a/new-try/assets/css/header.css
+++ b/new-try/assets/css/header.css
@@ -28,3 +28,8 @@ header a:hover{
 header a:active{
     color: gray;
 }
+@media only screen and (max-width: 600px){
+    header p{
+        font-size: 0.8rem;
+    }
+}
