--- a/new-try/assets/css/footer.css
+++ b/new-try/assets/css/footer.css
@@ -3,6 +3,8 @@ footer{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    position: absolute;
+    bottom: 0; right: 0; left: 0;
 }
 .form-button{
     text-decoration: underline;
@@ -84,6 +86,9 @@ footer{
         align-items: center;
     }
     .contact-form div label{
+        font-size: 1rem;
+    }
+    .form-button{
         font-size: 1rem;
     }
 }
