--- a/new-try/assets/css/index.css
+++ b/new-try/assets/css/index.css
@@ -1,8 +1,16 @@
 
 body{
-    position: relative;
     font-family: "Chakra Petch";
+    width: 100%;
+    min-height: 100%;
+    margin: 0;
 }
+html {
+    position: relative;
+    margin: 0;
+    min-height: 100%;
+    width: 100%;
+ }
 a{
     text-decoration: none;
     color: blue;
