--- a/new-try/assets/css/footer.css
+++ b/new-try/assets/css/footer.css
@@ -5,6 +5,8 @@ footer{
     align-items: center;
     position: absolute;
     bottom: 0; right: 0; left: 0;
+    background-color: white;
+    z-index: 100;
 }
 .form-button{
     text-decoration: underline;
