--- a/new-try/assets/css/header.css
+++ b/new-try/assets/css/header.css
@@ -1,19 +1,19 @@
 header{
-    height: 4.5rem;
     background-color: rgb(255, 255, 255);
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
     display: flex;
-    flex: 1;
     justify-content: space-between;
-    align-items: center;
+    align-items:center;
     padding-left: 0.8rem; padding-right: 0.8rem;
+    padding-bottom: 1px;
 }
 header p{
     font-size: 1.3rem;
     font-weight: bold;
+    margin: 0.6rem;
 }
 .social img{
     width: 2rem;
