--- a/new-try/assets/css/index-main.css
+++ b/new-try/assets/css/index-main.css
@@ -1,12 +1,14 @@
 main{
     font-family: "Protest Strike", sans-serif;
+    background-image: url(../images/space.jpg);
+    background-size: 50rem;
 }
 .full-name{
     display: flex;
     align-items: center ;
     justify-content: center;
     flex-direction: column;
-    margin-top: 10rem;
+    padding-top: 10rem;
 }
 .full-name p{
     margin: 0;
@@ -54,7 +56,9 @@ main{
 .kinder{
     font-size: 2.5rem;
     margin-bottom: 0;
+    color: rgb(243, 232, 232);
 }
 .kinder-container img{
     width: 20rem;
+    background-color: transparent;
 }
