--- a/new-try/assets/css/footer.css
+++ b/new-try/assets/css/footer.css
@@ -4,9 +4,9 @@ footer{
     flex-direction: column;
     align-items: center;
     position: absolute;
-    bottom: 0; right: 0; left: 0;
+    z-index: 1001;
     background-color: white;
-    z-index: 100;
+    bottom: 0; left: 0; right: 0;
 }
 .form-button{
     text-decoration: underline;
