--- a/new-try/assets/css/journey-main.css
+++ b/new-try/assets/css/journey-main.css
@@ -50,7 +50,6 @@ img{border-radius: 4px;}
     width: 22rem;
     height: 14rem;
     margin-right: 0;
-    margin-left: rem;
 }
 .images-py{
     margin-top: 1.9rem;
@@ -63,23 +62,52 @@ img{border-radius: 4px;}
     margin-top: 15rem;
 }
 @media only screen and (max-width: 649px){
+    .main-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .title{
+        font-size: 1.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-right: 4rem;
+    }
+    span{
+        margin-left: 0.5rem;
+    }
     .grid-container{
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        align-items: center;
+    }
+    .grid-title{
+        font-size: 1.7rem;
+    }
+    .grid-story{
+        font-size: 1.3rem;
+        width: 15rem;
+    }
+    .grid-texts {
+        width: 25rem;
     }
     .reverse{
         display: flex;
         flex-direction: column-reverse;
     }
     .electrician{
-        margin-right: 2rem;
+    width: 19rem;
+    height: 40rem;
+    margin-left: 0;
     }
     .images-py img{
-        margin-left: 0;
+        width: 18rem;
+
     }
     .images-py{
-        margin-right: 3rem;
+        margin-right: 0;
+        margin-left: 3rem;
         width: 22rem;
     }
     .html-css{
@@ -112,5 +140,6 @@ img{border-radius: 4px;}
     }
     .html-css{
         width: 15rem;
+        margin-top: 20rem;
     }
 }
