--- a/new-try/assets/css/journey-main.css
+++ b/new-try/assets/css/journey-main.css
@@ -1,4 +1,7 @@
-
+.journey-container{
+    background-color: rgba(0,0,0,0.2);
+    border: solid 7px rgba(0,0,0,0.01);
+}
 main{
     width: 100%;
     display: flex;
