--- a/new-try/assets/css/index-main.css
+++ b/new-try/assets/css/index-main.css
@@ -71,6 +71,19 @@ main{
     width: 20rem;
     background-color: transparent;
 }
+.bg-mention{
+    margin-bottom: 2rem;
+}
+.bg-mention a{
+    color: rgb(175, 175, 233);
+    transition: opacity 0.15s;
+}
+.bg-mention a:hover{
+    opacity: 0.7;
+}
+.bg-mention a:active{
+    opacity: 0.4;
+}
 @media only screen and (min-width:600px) and (max-width:1200px){
     .full-name{
         padding-top: 3rem;
