--- a/new-try/assets/css/index.css
+++ b/new-try/assets/css/index.css
@@ -26,3 +26,35 @@ input::-webkit-inner-spin-button{
 input[type=number]{
     -moz-appearance: textfield;
 }
+@font-face {
+    font-family: "Climate-Crisis";
+    src: url(../fonts/ClimateCrisis-2040.otf);
+}
+@font-face {
+    font-family: "Dogs";
+    src: url(../fonts/PawWowBlock-VGMDl.otf);
+}
+@font-face {
+    font-family: "Gaming";
+    src: url(../fonts/ARCADECLASSIC.TTF);
+}
+@font-face {
+    font-family: "BoardGames";
+    src: url(../fonts/vinque\ rg.otf);
+}
+@font-face {
+    font-family: "Music";
+    src: url(../fonts/Hipstravaganza-Regular.otf);
+}
+@font-face {
+    font-family: "Wing-Chun";
+    src: url(../fonts/SEVEMFBR.TTF);
+}
+@font-face {
+    font-family: "Eating";
+    src: url(../fonts/PWYummyDonuts.ttf);
+}
+@font-face {
+    font-family: "Space";
+    src: url(../fonts/marspolice_i.ttf);
+}
