--- a/new-try/assets/css/journey.css
+++ b/new-try/assets/css/journey.css
@@ -53,6 +53,7 @@ img{border-radius: 4px;}
     width: 22rem;
     height: 14rem;
     margin-right: 0;
+    margin-left: 5.5rem;
 }
 .images-py{
     margin-top: 1.9rem;
@@ -109,8 +110,7 @@ img{border-radius: 4px;}
 
     }
     .images-py{
-        margin-right: 0;
-        margin-left: 3rem;
+        margin-right: 5.5rem;
         width: 22rem;
     }
     .html-css{
@@ -134,8 +134,6 @@ img{border-radius: 4px;}
     .images-py{
         align-items: center;
         justify-content: center;
-        margin-left: 2rem;
-
     }
     .images-py img{
         width: 12rem;
