--- a/new-try/assets/css/journey.css
+++ b/new-try/assets/css/journey.css
@@ -3,17 +3,20 @@
     border: solid 7px rgba(0,0,0,0.01);
 }
 main{
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.title{
+.title-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 2rem;
-    width: 26rem;
     margin-top: 5rem;
     margin-bottom: 3rem;
-    padding-left: 4rem;
+}
+.title{
+    width: 26rem;
 }
 span{
     margin-left: 7rem;
@@ -65,7 +68,7 @@ img{border-radius: 4px;}
     width:34rem;
     margin-top: 15rem;
 }
-@media only screen and (max-width: 649px){
+@media only screen and (max-width: 820px){
     .main-container{
         display: flex;
         flex-direction: column;
@@ -76,7 +79,7 @@ img{border-radius: 4px;}
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-right: 4rem;
+        justify-content: center;
     }
     span{
         margin-left: 0.5rem;
@@ -118,7 +121,7 @@ img{border-radius: 4px;}
         margin-top: 3rem;
     }
 }
-@media only screen and (min-width:650px)and (max-width:900px){
+@media only screen and (min-width:821px)and (max-width:1200px){
     .grid-container{
         column-gap: 1rem;
     }
@@ -129,7 +132,7 @@ img{border-radius: 4px;}
     .electrician{
         width: 15rem;
         height: 34rem;
-        margin-left: 0;
+        margin-left: 2rem;
     }
     .images-py{
         align-items: center;
