--- a/assets/css/journey.css
+++ b/assets/css/journey.css
@@ -1,7 +1,5 @@
-.journey-container{
-    background-color: rgba(0,0,0,0.2);
-    border: solid 7px rgba(0,0,0,0.01);
-}
+
+
 main{
     display: flex;
     flex-direction: column;
@@ -68,6 +66,14 @@ img{border-radius: 4px;}
     width:34rem;
     margin-top: 15rem;
 }
+@media only screen and (max-width:801px){
+    header:hover{
+        .journey-container{
+            background-color:rgba(0,0,0,0.2);
+            border: none;
+        }
+}
+}
 @media only screen and (max-width: 820px){
     .main-container{
         display: flex;
@@ -120,8 +126,11 @@ img{border-radius: 4px;}
         width: 25rem;
         margin-top: 3rem;
     }
+    .journey-container{
+        border: none;
+    }
 }
-@media only screen and (min-width:821px)and (max-width:1200px){
+@media only screen and (min-width:821px) and (max-width:1200px){
     .grid-container{
         column-gap: 1rem;
     }
@@ -145,5 +154,8 @@ img{border-radius: 4px;}
     .html-css{
         width: 15rem;
         margin-top: 20rem;
+    }
+    .journey-container{
+        border: solid 7px rgba(0,0,0,0.01);
     }
 }
