--- a/assets/css/journey.css
+++ b/assets/css/journey.css
@@ -77,6 +77,7 @@ img{border-radius: 4px;}
         .journey-container{
             background-color:rgba(0,0,0,0.2);
             border: none;
+            border-radius: 50%;
         }
 }
 }
