--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -31,8 +31,8 @@ header:hover{
     font-weight: 900;
 }
 .full-name img{
-    width: 5rem;
-    height: 5rem;
+    width: 8rem;
+    height: 8rem;
     border-radius: 50%;
     position: absolute;
     top: 1rem;
@@ -126,15 +126,14 @@ header:hover{
     }
     .full-name{
         align-items: center;
-        justify-content: space-around;
         padding-top: 3rem;
+        margin-right: 8rem;
+
     }
     .full-name img{
-        margin-top: 2rem;
-        margin-left: 8rem;
-        width: 8rem;
-        height: 8rem;
-        position: inherit;
+        top: 3rem;
+        width: 12rem;
+        height: 12rem;
     }
     .name{
         background-size: 22rem;
@@ -148,9 +147,11 @@ header:hover{
         background-size: 8rem;
         background-position-y: 1rem;
     }
-
+    .kinder-container img{
+        width: 14rem;
+    }
     .kinder{
-        font-size: 2.8rem;
+        font-size: 3rem;
         margin-top: 0;
     }
     .skills{
