--- a/assets/css/journey.css
+++ b/assets/css/journey.css
@@ -1,3 +1,4 @@
+
 .journey-container{
     background-color:rgba(0,0,0,0.2);
     border: solid 7px rgba(0,0,0,0.01);
@@ -8,16 +9,10 @@ main{
     flex-direction: column;
     align-items: center;
 }
-.title-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
-    margin-top: 5rem;
-    margin-bottom: 3rem;
-}
 .title{
-    width: 26rem;
+    margin: 2.9rem 0;
+    display: flex;
+    flex-direction: column;
 }
 span{
     margin-left: 7rem;
@@ -38,7 +33,7 @@ span{
 .grid-title{
     display: flex;
     justify-content: center;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
     font-weight: 700;
     font-size: 2rem;
 }
@@ -69,7 +64,7 @@ img{border-radius: 4px;}
     width:34rem;
     margin-top: 15rem;
 }
-@media only screen and (max-width:801px){
+@media only screen and (max-width:600px){
     .journey-container{
         background-color: transparent;
     }
@@ -79,16 +74,60 @@ img{border-radius: 4px;}
             border: none;
             border-radius: 50%;
         }
-}
-}
-@media only screen and (max-width: 820px){
-    .main-container{
+    }
+    .grid-container{
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        margin: 2rem 0;
+
+    }
+    .grid-title{
+        font-size: 1.3rem;
+    }
+    .grid-story{
+        font-size: 1rem;
+        width: 11rem;
+        margin: 1rem 2rem;
     }
     .title{
-        font-size: 1.7rem;
+        font-size: 3rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    span{
+        margin-left: 0.5rem;
+    }
+    .reverse{
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+    }
+    .electrician{
+        width: 14rem;
+        height: 25rem;
+        margin-left: 0;
+        margin-top: 2rem;
+    }
+    .images-py{
+        margin-right: 0;
+    }
+    .images-py img{
+        width: 16rem;
+        margin: 0;
+        height: 12rem;
+    }
+    .html-css{
+        margin-top: 5rem;
+        width: 12rem;
+    }
+}
+@media only screen and (min-width:601px) and (max-width: 820px){
+    .title{
+        font-size: 3rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -117,7 +156,7 @@ img{border-radius: 4px;}
         flex-direction: column-reverse;
     }
     .electrician{
-    width: 19rem;
+    width: 25rem;
     height: 40rem;
     margin-left: 0;
     }
@@ -140,6 +179,9 @@ img{border-radius: 4px;}
 @media only screen and (min-width:821px) and (max-width:1200px){
     .grid-container{
         column-gap: 1rem;
+    }
+    .grid-title{
+        font-size: 2rem;
     }
     .grid-texts{
         width: 23rem;
