--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,15 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 html{
     position: relative;
 }
 body{
     font-family: "Chakra Petch", sans-serif;
     min-height: 100vh; 
+    min-width: 100vw;
     margin: 0;
 	padding: 0;
 }
