--- a/assets/css/journey.css
+++ b/assets/css/journey.css
@@ -125,7 +125,29 @@ img{border-radius: 4px;}
         width: 12rem;
     }
 }
+@media only screen and (min-width:601px) and (max-width: 800px){
+    .journey-container{
+        background-color: transparent;
+    }
+    header:hover{
+        .journey-container{
+            background-color:rgba(0,0,0,0.2);
+            border: none;
+            border-radius: 50%;
+        }
+    }
+}
 @media only screen and (min-width:601px) and (max-width: 820px){
+    .journey-container{
+        background-color: transparent;
+    }
+    header:hover{
+        .journey-container{
+            background-color:rgba(0,0,0,0.2);
+            border: none;
+            border-radius: 50%;
+        }
+    }
     .title{
         font-size: 3rem;
         display: flex;
